# credit_calculator

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  jupyter.Dockerfile  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  index.md
docs/adr/: 0001-record-architecture-decision.md
monitoring/: prometheus.yml
notebooks/: 01_eda_and_modelling.ipynb
scripts/: prepare_data.py
src/: __init__.py  config.py  data_ingestion.py  hpo.py  logging_config.py  observability.py  pipeline.py  train.py  utils.py
tests/: test_api.py  test_data_ingestion.py  test_pipeline.py  test_utils.py
